[gd_scene load_steps=4 format=3 uid="uid://dnvvk6754xgtg"]

[ext_resource type="Script" uid="uid://h8s8mtfkhph1" path="res://scenes/client.gd" id="1_5f806"]
[ext_resource type="AudioStream" uid="uid://c68oi6qaw2syy" path="res://audio/typing.wav" id="2_1t5vp"]
[ext_resource type="AudioStream" uid="uid://d1bvlbluifta8" path="res://audio/releasing.wav" id="3_4tr0r"]

[node name="Client" type="Node"]
script = ExtResource("1_5f806")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Typing" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_1t5vp")

[node name="Releasing" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4tr0r")

[connection signal="connection_status_changed" from="." to="." method="_on_connection_status_changed"]
[connection signal="server_discovered" from="." to="." method="_on_server_discovered"]
[connection signal="timeout" from="Timer" to="." method="_on_poll_timer_timeout"]
